<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:id="@+id/selecttime_popUp_top"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_count_for_one_exercise"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/time_countTxt"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time_countTxt"
            android:id="@+id/linearlayout_timecount"
            android:layout_marginTop="2dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30"
                android:textStyle="bold"
                android:textSize="25sp"
                android:id="@+id/time_countTime"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sec"
                android:textSize="23sp"
                android:layout_marginStart="7dp"
                android:id="@+id/time_countTime_sec"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="45dp"
                android:layout_height="50dp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/ic_minus_24"
                android:layout_marginStart="125dp"
                android:id="@+id/time_countTime_subsec"
                android:backgroundTint="@color/orange"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="45dp"
                android:layout_height="50dp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/ic_add_24"
                android:layout_marginStart="8dp"
                android:id="@+id/time_countTime_addsec"
                android:backgroundTint="@color/orange"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prepare_time"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@+id/linearlayout_timecount"
            android:id="@+id/prepare_time_countTxt"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prepare_time_countTxt"
            android:layout_marginTop="2dp"
            android:id="@+id/linearlayout_prepareTime"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:textStyle="bold"
                android:textSize="25sp"
                android:id="@+id/time_prepareTime"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sec"
                android:textSize="23sp"
                android:layout_marginStart="7dp"
                android:id="@+id/time_prepareTime_sec"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="45dp"
                android:layout_height="50dp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/ic_minus_24"
                android:layout_marginStart="125dp"
                android:id="@+id/time_prepareTime_subsec"
                android:backgroundTint="@color/orange"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="45dp"
                android:layout_height="50dp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/ic_add_24"
                android:layout_marginStart="8dp"
                android:id="@+id/time_prepareTime_addsec"
                android:backgroundTint="@color/orange"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_rounds"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@+id/linearlayout_prepareTime"
            android:id="@+id/no_of_round_Txt"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_of_round_Txt"
            android:layout_marginTop="2dp"
            android:id="@+id/linearlayout_no_of_rounds"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textStyle="bold"
                android:textSize="25sp"
                android:id="@+id/no_of_round"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rounds"
                android:textSize="23sp"
                android:layout_marginStart="7dp"
                android:id="@+id/no_of_round_rounds"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="45dp"
                android:layout_height="50dp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/ic_minus_24"
                android:layout_marginStart="105dp"
                android:id="@+id/no_of_round_subRounds"
                android:backgroundTint="@color/orange"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="45dp"
                android:layout_height="50dp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/ic_add_24"
                android:layout_marginStart="8dp"
                android:id="@+id/no_of_round_addRounds"
                android:backgroundTint="@color/orange"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest_between_rounds"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@+id/linearlayout_no_of_rounds"
            android:id="@+id/rest_rounds_Txt"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rest_rounds_Txt"
            android:layout_marginTop="2dp"
            android:id="@+id/linearlayout_rounds_rest"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_0"
                android:textStyle="bold"
                android:textSize="25sp"
                android:id="@+id/round_rest_time"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:textSize="23sp"
                android:layout_marginStart="7dp"
                android:id="@+id/round_rest_time_unit"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="45dp"
                android:layout_height="50dp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/ic_minus_24"
                android:layout_marginStart="115dp"
                android:id="@+id/reduce_round_restTime"
                android:backgroundTint="@color/orange"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="45dp"
                android:layout_height="50dp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/ic_add_24"
                android:layout_marginStart="8dp"
                android:id="@+id/increase_round_restTime"
                android:backgroundTint="@color/orange"
                />

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:layout_below="@+id/selecttime_popUp_top"
        android:layout_marginTop="100dp"
        android:padding="8dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/selecttime_popUp_bottom"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_workout_time_linear"
            android:layout_centerHorizontal="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_time"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:id="@+id/total_workout_time_txt"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:layout_marginStart="5dp"
                android:id="@+id/total_workout_time"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/total_workout_time_linear"
            android:layout_centerHorizontal="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_lost"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:id="@+id/calories_lost_txt"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:id="@+id/calories_lost"
                />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selecttime_popUp_bottom"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/selecttime_popUp_cancel"
            android:backgroundTint="@color/green"
            android:layout_marginStart="50dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/selecttime_popUp_start"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/green"
            />
    </RelativeLayout>

</RelativeLayout>