<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainActivityParent"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homePageCardView1"
        android:padding="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/homecard1Strength"
                android:layout_margin="10dp"
                android:src="@mipmap/strength"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workouts"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/card1Workout"
                android:layout_toEndOf="@+id/homecard1Strength"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete_sets"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@+id/homecard1Strength"
                android:layout_marginStart="20dp"
                android:layout_below="@id/card1Workout"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:id="@+id/card1sets"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="12dp"
                android:src="@drawable/ic_baseline_play"
                android:id="@+id/card1Play"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homePageCardView2"
        android:padding="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/homePageCardView1"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/homecard2Challenge"
                android:layout_margin="10dp"
                android:src="@mipmap/challenge"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/challenge"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/card2Challenge"
                android:layout_toEndOf="@+id/homecard2Challenge"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_challenge"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@+id/homecard2Challenge"
                android:layout_marginStart="20dp"
                android:layout_below="@id/card2Challenge"
                android:textSize="14sp"
                android:id="@+id/card2txtchallenge"
                android:layout_marginTop="4dp"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="12dp"
                android:src="@drawable/ic_baseline_play"
                android:id="@+id/card2play"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homePageCardView3"
        android:padding="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/homePageCardView2"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/homecard3calendar"
                android:layout_margin="10dp"
                android:src="@mipmap/calendar"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_workouts"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/card3CustomWorkout"
                android:layout_toEndOf="@+id/homecard3calendar"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_your_own_workout"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@+id/homecard3calendar"
                android:layout_marginStart="20dp"
                android:layout_below="@id/card3CustomWorkout"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:id="@+id/card3txtcustomworkout"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="12dp"
                android:src="@drawable/ic_baseline_play"
                android:id="@+id/card3play"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homePageCardView4"
        android:padding="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/blue"
        android:layout_margin="5dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/WorkDoneRelativeLayout"
                >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/card4WokDone"
                    android:src="@mipmap/work"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days_done"
                    android:textColor="@color/white"
                    android:layout_toEndOf="@id/card4WokDone"
                    android:textSize="22sp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:id="@+id/card4Workdonetxt"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/card4changeWorkDone"
                    android:layout_toEndOf="@id/card4Workdonetxt"
                    android:layout_centerVertical="true"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginStart="5dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_below="@+id/WorkDoneRelativeLayout"
                android:id="@+id/CaloriesRelativeLayout"
                >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/card4Calories"
                    android:src="@mipmap/fire"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories_lost"
                    android:textColor="@color/white"
                    android:layout_toEndOf="@id/card4Calories"
                    android:textSize="20sp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:id="@+id/card4CaloriesLosttxt"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/card4changeCaloriesLost"
                    android:layout_toEndOf="@id/card4CaloriesLosttxt"
                    android:layout_centerVertical="true"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginStart="5dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_below="@+id/CaloriesRelativeLayout"
                android:id="@+id/LevelRelativeLayout"
                >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/card4Levelstar"
                    android:src="@mipmap/star"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level"
                    android:textColor="@color/white"
                    android:layout_toEndOf="@id/card4Levelstar"
                    android:textSize="20sp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:id="@+id/card4Leveltxt"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/card4changeLevel"
                    android:layout_toEndOf="@id/card4Leveltxt"
                    android:layout_centerVertical="true"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginStart="5dp"
                    />
                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card4Levelstar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:progress="10"
                    android:max="100"
                    android:layout_margin="10dp"
                    android:id="@+id/card4Progessbar"
                    />
            </RelativeLayout>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>



</RelativeLayout>